# enkra-send

./: .gitignore  LICENSE  README.md  pubspec.yaml
build_tools/: build_web.sh  patch_web.sh
build_tools/web/: flutter.js.patch  flutter_service_worker.js.patch
integration_test/: rust_test.dart
lib/: main.dart  theme.dart  util.dart
lib/components/: app_title.dart
lib/models/: api.dart  app_state.dart  device_send_manager.dart  paired.dart  send.dart  wait_to_pair.dart  ws_client.dart
lib/native/: ffi.io.dart  ffi.web.dart  native.dart
lib/pages/: description.dart  login.dart  qr_code_scanner.dart  send.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: crypto.dart
native/: Cargo.toml  build.rs
native/src/: api.rs  lib.rs
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: crypto.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_enkra_send.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_enkra_send.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: flutter_bootstrap.js  index.html  manifest.json
