[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.69"
flutter_rust_bridge = "1.64.0"
getrandom = { version = "0.2.8", features = ["js"] }
hpke = { version = "0.10.0", default-features = false, features = ["alloc", "x25519"] }
rand = "0.8.5"
tink-aead = "0.2.4"
tink-core = "0.2.4"

[build-dependencies]
flutter_rust_bridge_codegen = "1.63.1"

[patch.crates-io]
tink-core = { git = "https://github.com/enkra/tink-rust.git", rev= "3a87ad2" }
tink-aead = { git = "https://github.com/enkra/tink-rust.git", rev= "3a87ad2" }
